--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
 	<link rel="stylesheet" type="text/css" href="./style.css">
 	<!-- Bootstrap v4-->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<!-- Favicon -->
+	<link rel="icon" type="image/png" href="img/wave.png">
 </head>
 <body>
-
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+	  <a class="navbar-brand" href="#">YVETTE TRAN</a>
+	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarNav">
+	    <ul class="navbar-nav">
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">ABOUT</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">PORTFOLIO</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">CONTACT</a>
+	      </li>
+	      <li class="nav-item">
+	        <a class="nav-link" href="#">RESUME</a>
+	      </li>
+	    </ul>
+	  </div>
+	</nav>
 
 <!-- Bootstrap v4 -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
