--- a/index.html
+++ b/index.html
@@ -9,32 +9,65 @@
 	<link rel="icon" type="image/png" href="img/wave.png">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="#">YVETTE TRAN</a>
+	<!-- Navbar -->
+	<nav id="navbar-scroll" class="navbar sticky-top navbar-expand-lg navbar-light border">
+	  <img class="ml-2" id="headshot" src="./img/headshot.png">
+	  <a class="navbar-brand ml-4" href="#about">YVETTE TRAN</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 	    <span class="navbar-toggler-icon"></span>
 	  </button>
 	  <div class="collapse navbar-collapse" id="navbarNav">
-	    <ul class="navbar-nav">
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">ABOUT</a>
+	    <ul class="navbar-nav ml-auto">
+	      <li class="nav-item mr-4">
+	        <a class="nav-link" href="#about">ABOUT</a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">PORTFOLIO</a>
+	      <li class="nav-item mr-4">
+	        <a class="nav-link" href="#portfolio">PORTFOLIO</a>
 	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">CONTACT</a>
+	      <li class="nav-item mr-4">
+	        <a class="nav-link" href="#contact">CONTACT</a>
 	      </li>
-	      <li class="nav-item">
+	      <li class="nav-item mr-4">
 	        <a class="nav-link" href="#">RESUME</a>
 	      </li>
 	    </ul>
 	  </div>
 	</nav>
+	<!-- About Me -->
+	<div class="container" data-spy="scroll" data-target="navbar-scroll" data-offset="0">
+		<div class="row mt-4" id="about">
+			<div class="col-md-4">
+				<figure class="m-5 text-center">
+					<img id="curious" src="./img/curious.svg" alt="Magnify Glass">
+					<figcaption class="about-me-fig">Naturally Curious, Versed In Solution-Based Thinking</figcaption>
+				</figure>
+			</div>
+			<div class="col-md-4">
+				<figure class="m-5 text-center">
+					<img id="communication" src="./img/communication.svg" alt="Chat Bubble">
+					<figcaption class="about-me-fig">Excellent Communicator, Trained In Non-Violent Communication</figcaption>
+				</figure>
+			</div>
+			<div class="col-md-4">
+				<figure class="m-5 text-center">
+					<img id="teamwork" src="./img/teamwork.svg" alt="Teamwork">
+					<figcaption class="about-me-fig">Experienced Working In and Leading Diverse Teams</figcaption>
+				</figure>
+			</div>
+		</div>
+		<div class="row mt-5">
+			<div class="col-md-6">
+				<p id="intro">Hi there! I'm Yvette a software engineer from San Jose, California.
+			</div>
+			<div class="col-md-6">
+				<p id="bio">I'm a life-long learner who enjoys transforming needs into actions and breaking down complex problems into meaningful solutions. I'm passionate about building accessible technologies for diverse communities. Feel free to say hello and drop me a line.</p>
+			</div>
+		</div>
+	</div>
 
-<!-- Bootstrap v4 -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<!-- Bootstrap v4 -->
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
