--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<!-- Navbar -->
-	<nav id="navbar-scroll" class="navbar sticky-top navbar-expand-lg navbar-light border">
+	<nav id="navbar-scroll" class="navbar sticky-top navbar-expand-lg navbar-light bg-white border">
 	  <img class="ml-2" id="headshot" src="./img/headshot.png">
 	  <a class="navbar-brand ml-4" href="#about">YVETTE TRAN</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,8 +33,10 @@
 	    </ul>
 	  </div>
 	</nav>
-	<!-- About Me -->
 	<div class="container" data-spy="scroll" data-target="navbar-scroll" data-offset="0">
+
+		<!-- About Me -->
+
 		<div class="row mt-4" id="about">
 			<div class="col-md-4">
 				<figure class="m-5 text-center">
@@ -63,6 +65,44 @@
 				<p id="bio">I'm a life-long learner who enjoys transforming needs into actions and breaking down complex problems into meaningful solutions. I'm passionate about building accessible technologies for diverse communities. Feel free to say hello and drop me a line.</p>
 			</div>
 		</div>
+
+		<hr>
+
+		<!-- Portfolio -->
+		<div class="row" id="portfolio">
+			<div class="col-md-2">
+				<h3 id="tech-header">Technology</h3>
+			</div>
+			<div class="col-md-2 tech-stack">
+				<ul>
+					<li>JavaScript</li>
+					<li>Node.js</li>
+					<li>HTML</li>
+					<li>CSS</li>
+				</ul>
+			</div>
+			<div class="col-md-2 tech-stack">
+				<ul>
+					<li>React</li>
+					<li>Bootstrap</li>
+					<li>jQuery</li>
+				</ul>
+			</div>
+			<div class="col-md-2 tech-stack">
+				<ul>
+					<li>Git/Github</li>
+					<li>Bash</li>
+					<li>MySQL</li>
+					<li>MongoDB</li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<h3 id="apps-header">Apps Built</h3>
+			</div>
+		</div>
+
 	</div>
 
 	<!-- Bootstrap v4 -->
