--- a/index.html
+++ b/index.html
@@ -103,6 +103,21 @@
 			</div>
 		</div>
 
+		<hr>
+
+		<!-- Contact -->
+		<div class="row">
+			<div class="col-md-12 text-center contact-header">
+				<h3>Connect With Me: <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank"><img id="linkedin-icon" src="./img/linkedin.svg" alt="LinkedIn Icon"></a></h3>
+			</div>
+			<div class="col-md-12 text-center contact-header">
+				<h3>Or</h3>
+			</div>
+			<div class="col-md-12 text-center contact-header">
+				<h3>Email Me: <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a></h3>
+			</div>
+		</div>
+
 	</div>
 
 	<!-- Bootstrap v4 -->
