--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 		<!-- Contact -->
 		<div class="row">
 			<div class="col-md-12 text-center contact-header">
+				<h3>Check Out My GitHub: <a href="https://github.com/Trantastic" target="_blank"><img id="github-icon"src="./img/github.svg" alt="GitHub Logo"></a></h3>
+			</div>
+			<div class="col-md-12 text-center contact-header">
 				<h3>Connect With Me: <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank"><img id="linkedin-icon" src="./img/linkedin.svg" alt="LinkedIn Icon"></a></h3>
 			</div>
 			<div class="col-md-12 text-center contact-header">
