--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/wave.png">
 </head>
-<body>
+<body data-spy="scroll" data-target="navbar-scroll" data-offset="1">
 	<!-- Navbar -->
 	<nav id="navbar-scroll" class="navbar sticky-top navbar-expand-lg navbar-light bg-white border">
 	  <img class="ml-2" id="headshot" src="./img/headshot.png">
@@ -33,7 +33,7 @@
 	    </ul>
 	  </div>
 	</nav>
-	<div class="container" data-spy="scroll" data-target="navbar-scroll" data-offset="0">
+	<div class="container">
 
 		<!-- About Me -->
 
@@ -66,11 +66,11 @@
 			</div>
 		</div>
 
-		<hr>
+		<hr class="scroll-spy">
 
 		<!-- Portfolio -->
-		<div class="row" id="portfolio">
-			<div class="col-md-2">
+		<div class="row">
+			<div class="col-md-2 id="portfolio"">
 				<h3 id="tech-header">Technology</h3>
 			</div>
 			<div class="col-md-2 tech-stack">
@@ -103,25 +103,28 @@
 			</div>
 		</div>
 
-		<hr>
+		<hr class="scroll-spy">
 
 		<!-- Contact -->
 		<div class="row">
-			<div class="col-md-12 text-center contact-header">
+			<div class="col-md-12 text-center contact-header" id="contact">
 				<h3>Check Out My GitHub: <a href="https://github.com/Trantastic" target="_blank"><img id="github-icon"src="./img/github.svg" alt="GitHub Logo"></a></h3>
 			</div>
-			<div class="col-md-12 text-center contact-header">
+			<div class="col-md-12 mt-5 text-center contact-header">
 				<h3>Connect With Me: <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank"><img id="linkedin-icon" src="./img/linkedin.svg" alt="LinkedIn Icon"></a></h3>
 			</div>
-			<div class="col-md-12 text-center contact-header">
+			<div class="col-md-12 mt-5 text-center contact-header">
 				<h3>Or</h3>
 			</div>
-			<div class="col-md-12 text-center contact-header">
+			<div class="col-md-12 mt-5 text-center contact-header">
 				<h3>Email Me: <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a></h3>
 			</div>
 		</div>
-
 	</div>
+
+	<footer class="mt-5 ml-3">
+		<h6>Designed by Yvette Tran 2018</h6>
+	</footer>
 
 	<!-- Bootstrap v4 -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
