fixed scrollspy top

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/wave.png">
 </head>
-<body data-spy="scroll" data-target="navbar-scroll" data-offset="1">
+<body data-spy="scroll" data-target="#navbar-scroll" data-offset="1">
 	<!-- Navbar -->
 	<nav id="navbar-scroll" class="navbar sticky-top navbar-expand-lg navbar-light bg-white border">
 	  <img class="ml-2" id="headshot" src="./img/headshot.png">
@@ -37,7 +37,7 @@
 
 		<!-- About Me -->
 
-		<div class="row mt-4" id="about">
+		<div class="row pt-5" id="about">
 			<div class="col-md-4">
 				<figure class="m-5 text-center">
 					<img id="curious" src="./img/curious.svg" alt="Magnify Glass">
@@ -69,7 +69,7 @@
 		<hr class="scroll-spy">
 
 		<!-- Portfolio -->
-		<div class="row">
+		<div class="row pt-5">
 			<div class="col-md-2 id="portfolio"">
 				<h3 id="tech-header">Technology</h3>
 			</div>
@@ -106,7 +106,7 @@
 		<hr class="scroll-spy">
 
 		<!-- Contact -->
-		<div class="row">
+		<div class="row pt-5">
 			<div class="col-md-12 text-center contact-header" id="contact">
 				<h3>Check Out My GitHub: <a href="https://github.com/Trantastic" target="_blank"><img id="github-icon"src="./img/github.svg" alt="GitHub Logo"></a></h3>
 			</div>
