--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body data-spy="scroll" data-target="#navbar-scroll" data-offset="1">
 	<!-- Navbar -->
-	<nav id="navbar-scroll" class="navbar sticky-top navbar-expand-lg navbar-light bg-white border">
+	<nav id="navbar-scroll" class="navbar fixed-top navbar-expand-lg navbar-light">
 	  <img class="ml-2" id="headshot" src="./img/headshot.png">
 	  <a class="navbar-brand ml-4" href="#about">YVETTE TRAN</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,8 +36,7 @@
 	<div class="container">
 
 		<!-- About Me -->
-
-		<div class="row pt-5" id="about">
+		<div class="row" id="about">
 			<div class="col-md-4">
 				<figure class="m-5 text-center">
 					<img id="curious" src="./img/curious.svg" alt="Magnify Glass">
@@ -66,11 +65,11 @@
 			</div>
 		</div>
 
-		<hr class="scroll-spy">
+		<hr>
 
 		<!-- Portfolio -->
-		<div class="row pt-5">
-			<div class="col-md-2 id="portfolio"">
+		<div class="row" id="portfolio">
+			<div class="col-md-2">
 				<h3 id="tech-header">Technology</h3>
 			</div>
 			<div class="col-md-2 tech-stack">
@@ -97,17 +96,65 @@
 				</ul>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row mb-5">
 			<div class="col-md-12">
 				<h3 id="apps-header">Apps Built</h3>
 			</div>
 		</div>
+		<div class="row mb-5">
+			<div class="col-md-3 mr-5">
+				<div class="card" style="width: 18rem;">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <a href="#" class="card-link">Card link</a>
+				    <a href="#" class="card-link">Another link</a>
+				  </div>
+				</div>
+			</div>
+			<div class="col-md-7">
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-3 mr-5">
+				<div class="card" style="width: 18rem;">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <a href="#" class="card-link">Card link</a>
+				    <a href="#" class="card-link">Another link</a>
+				  </div>
+				</div>
+			</div>
+			<div class="col-md-7">
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+			</div>
+		</div>
+		<div class="row mb-5">
+			<div class="col-md-3 mr-5">
+				<div class="card" style="width: 18rem;">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <a href="#" class="card-link">Card link</a>
+				    <a href="#" class="card-link">Another link</a>
+				  </div>
+				</div>
+			</div>
+			<div class="col-md-7">
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+			</div>
+		</div>
 
-		<hr class="scroll-spy">
+		<hr>
 
 		<!-- Contact -->
-		<div class="row pt-5">
-			<div class="col-md-12 text-center contact-header" id="contact">
+		<div class="row" id="contact">
+			<div class="col-md-12 text-center contact-header">
 				<h3>Check Out My GitHub: <a href="https://github.com/Trantastic" target="_blank"><img id="github-icon"src="./img/github.svg" alt="GitHub Logo"></a></h3>
 			</div>
 			<div class="col-md-12 mt-5 text-center contact-header">
