--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/wave.png">
 </head>
+
 <body data-spy="scroll" data-target="#navbar-scroll" data-offset="1">
 	<!-- Navbar -->
-	<nav id="navbar-scroll" class="navbar fixed-top navbar-expand-lg navbar-light">
+	<nav id="navbar-scroll" class="navbar fixed-top navbar-expand-lg navbar-light slide-up">
 	  <img class="ml-2" id="headshot" src="./img/headshot.png">
 	  <a class="navbar-brand ml-4" href="#about">YVETTE TRAN</a>
 	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +37,7 @@
 	<div class="container">
 
 		<!-- About Me -->
-		<div class="row" id="about">
+		<div class="row slide-up" id="about">
 			<div class="col-md-4">
 				<figure class="m-5 text-center">
 					<img id="curious" src="./img/curious.svg" alt="Magnify Glass">
@@ -46,7 +47,7 @@
 			<div class="col-md-4">
 				<figure class="m-5 text-center">
 					<img id="communication" src="./img/communication.svg" alt="Chat Bubble">
-					<figcaption class="about-me-fig">Excellent Communicator, Trained In Non-Violent Communication</figcaption>
+					<figcaption class= slide-up"about-me-fig">Excellent Communicator, Trained In Non-Violent Communication</figcaption>
 				</figure>
 			</div>
 			<div class="col-md-4">
@@ -56,7 +57,7 @@
 				</figure>
 			</div>
 		</div>
-		<div class="row mt-5">
+		<div class="row mt-3 content-spacing slide-up">
 			<div class="col-md-6">
 				<p id="intro">Hi there! I'm Yvette a software engineer from San Jose, California.
 			</div>
@@ -65,10 +66,8 @@
 			</div>
 		</div>
 
-		<hr>
-
 		<!-- Portfolio -->
-		<div class="row" id="portfolio">
+		<div class="row slide-up" id="portfolio">
 			<div class="col-md-2">
 				<h3 id="tech-header">Technology</h3>
 			</div>
@@ -96,12 +95,12 @@
 				</ul>
 			</div>
 		</div>
-		<div class="row mb-5">
+		<div class="row mb-5 slide-up">
 			<div class="col-md-12">
 				<h3 id="apps-header">Apps Built</h3>
 			</div>
 		</div>
-		<div class="row mb-5">
+		<div class="row mb-5 slide-up">
 			<div class="col-md-3 mr-5">
 				<div class="card" style="width: 18rem;">
 				  <div class="card-body">
@@ -117,7 +116,7 @@
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 			</div>
 		</div>
-		<div class="row mb-5">
+		<div class="row mb-5 slide-up">
 			<div class="col-md-3 mr-5">
 				<div class="card" style="width: 18rem;">
 				  <div class="card-body">
@@ -133,7 +132,7 @@
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 			</div>
 		</div>
-		<div class="row mb-5">
+		<div class="row mb-5 slide-up">
 			<div class="col-md-3 mr-5">
 				<div class="card" style="width: 18rem;">
 				  <div class="card-body">
@@ -145,37 +144,40 @@
 				  </div>
 				</div>
 			</div>
-			<div class="col-md-7">
+			<div class="col-md-7 content-spacing">
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 			</div>
 		</div>
-
-		<hr>
 
 		<!-- Contact -->
-		<div class="row" id="contact">
+		<div class="row content-spacing slide-up" id="contact">
 			<div class="col-md-12 text-center contact-header">
 				<h3>Check Out My GitHub: <a href="https://github.com/Trantastic" target="_blank"><img id="github-icon"src="./img/github.svg" alt="GitHub Logo"></a></h3>
 			</div>
-			<div class="col-md-12 mt-5 text-center contact-header">
+			<div class="col-md-12 mt-4 text-center contact-header">
 				<h3>Connect With Me: <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank"><img id="linkedin-icon" src="./img/linkedin.svg" alt="LinkedIn Icon"></a></h3>
 			</div>
-			<div class="col-md-12 mt-5 text-center contact-header">
+			<div class="col-md-12 mt-4 text-center contact-header">
 				<h3>Or</h3>
 			</div>
-			<div class="col-md-12 mt-5 text-center contact-header">
+			<div class="col-md-12 mt-4 text-center contact-header">
 				<h3>Email Me: <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a></h3>
 			</div>
 		</div>
 	</div>
 
 	<footer class="mt-5 ml-3">
-		<h6>Designed by Yvette Tran 2018</h6>
+		<h6>Coded and Designed by Yvette Tran 2018</h6>
 	</footer>
 
+	<!-- ScrollReveal -->
+	<script src="https://unpkg.com/scrollreveal"></script>
 	<!-- Bootstrap v4 -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<!-- index.js file -->
+	<script src="./index.js"></script>
+
 </body>
 </html>
