added background to contact and fixed spacing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="img/wave.png">
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target="#navbar-scroll" data-offset="1">
@@ -47,7 +49,7 @@
 			<div class="col-md-4">
 				<figure class="m-5 text-center">
 					<img id="communication" src="./img/communication.svg" alt="Chat Bubble">
-					<figcaption class= slide-up"about-me-fig">Excellent Communicator, Trained In Non-Violent Communication</figcaption>
+					<figcaption class="slide-up about-me-fig">Excellent Communicator, Trained In Non-Violent Communication</figcaption>
 				</figure>
 			</div>
 			<div class="col-md-4">
@@ -148,9 +150,27 @@
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
 			</div>
 		</div>
+	</div>
 
+	<div class="container-fluid" id="contact">
 		<!-- Contact -->
-		<div class="row content-spacing slide-up" id="contact">
+		<div class="row content-spacing slide-up">
+			<div class="col-md-12 text-center contact-header">
+				<h3>Check Out My GitHub: <a href="https://github.com/Trantastic" target="_blank"><img id="github-icon"src="./img/github.svg" alt="GitHub Logo"></a></h3>
+				<h3>Connect With Me: <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank"><img id="linkedin-icon" src="./img/linkedin.svg" alt="LinkedIn Icon"></a></h3>
+				<h3>Or</h3>
+				<h3>Email Me: <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a></h3>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<footer class="ml-1">
+					<p>Coded and Designed by Yvette Tran 2018</p>
+				</footer>
+			</div>
+		</div>
+	</div>
+<!-- 		<div class="row content-spacing slide-up" id="contact">
 			<div class="col-md-12 text-center contact-header">
 				<h3>Check Out My GitHub: <a href="https://github.com/Trantastic" target="_blank"><img id="github-icon"src="./img/github.svg" alt="GitHub Logo"></a></h3>
 			</div>
@@ -164,11 +184,7 @@
 				<h3>Email Me: <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a></h3>
 			</div>
 		</div>
-	</div>
-
-	<footer class="mt-5 ml-3">
-		<h6>Coded and Designed by Yvette Tran 2018</h6>
-	</footer>
+	</div> -->
 
 	<!-- ScrollReveal -->
 	<script src="https://unpkg.com/scrollreveal"></script>
