--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	        <a class="nav-link" href="#contact">CONTACT</a>
 	      </li>
 	      <li class="nav-item mr-4">
-	        <a class="nav-link" href="#">RESUME</a>
+	        <a class="nav-link" href="./img/yvette tran resume.pdf" target="_blank">RESUME</a>
 	      </li>
 	    </ul>
 	  </div>
@@ -59,7 +59,7 @@
 				</figure>
 			</div>
 		</div>
-		<div class="row mt-3 content-spacing slide-up">
+		<div class="row mt-3 slide-up">
 			<div class="col-md-6">
 				<p id="intro">Hi there! I'm Yvette a software engineer from San Jose, California.
 			</div>
@@ -104,57 +104,34 @@
 		</div>
 		<div class="row mb-5 slide-up">
 			<div class="col-md-3 mr-5">
-				<div class="card" style="width: 18rem;">
-				  <div class="card-body">
-				    <h5 class="card-title">Card title</h5>
-				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				    <a href="#" class="card-link">Card link</a>
-				    <a href="#" class="card-link">Another link</a>
-				  </div>
-				</div>
+				<a href="#"><img class="border border-secondary" id="portfolio-img" src="./img/medihelper.png"></a>
 			</div>
 			<div class="col-md-7">
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<p id="app-descr">Improves the process of caretaking by providing easy access and storage of patient's medical data necessary for successful caretaking.</p>
 			</div>
 		</div>
 		<div class="row mb-5 slide-up">
 			<div class="col-md-3 mr-5">
-				<div class="card" style="width: 18rem;">
-				  <div class="card-body">
-				    <h5 class="card-title">Card title</h5>
-				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				    <a href="#" class="card-link">Card link</a>
-				    <a href="#" class="card-link">Another link</a>
-				  </div>
-				</div>
+				<a href="#"><img class="border border-secondary" id="portfolio-img" src="./img/tavola.png"></a>
 			</div>
 			<div class="col-md-7">
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<p id="app-descr">Provides easy immediate access to medical information of students.</p>
 			</div>
 		</div>
 		<div class="row mb-5 slide-up">
 			<div class="col-md-3 mr-5">
-				<div class="card" style="width: 18rem;">
-				  <div class="card-body">
-				    <h5 class="card-title">Card title</h5>
-				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				    <a href="#" class="card-link">Card link</a>
-				    <a href="#" class="card-link">Another link</a>
-				  </div>
-				</div>
+				<a href="#"><img class="border border-secondary" id="portfolio-img" src="./img/findyournature.png"></a>
 			</div>
-			<div class="col-md-7 content-spacing">
-				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+			<div class="col-md-7 last">
+				<p id="app-descr">Searches for national park attractions in the United States. Results display a brief description of the attraction, weather forecasts & alerts.</p>
 			</div>
 		</div>
+		<p id="spacing"></p>
 	</div>
 
 	<div class="container-fluid" id="contact">
 		<!-- Contact -->
-		<div class="row content-spacing slide-up">
+		<div class="row slide-up">
 			<div class="col-md-12 text-center contact-header">
 				<h3>Check Out My GitHub: <a href="https://github.com/Trantastic" target="_blank"><img id="github-icon"src="./img/github.svg" alt="GitHub Logo"></a></h3>
 				<h3>Connect With Me: <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank"><img id="linkedin-icon" src="./img/linkedin.svg" alt="LinkedIn Icon"></a></h3>
@@ -170,21 +147,6 @@
 			</div>
 		</div>
 	</div>
-<!-- 		<div class="row content-spacing slide-up" id="contact">
-			<div class="col-md-12 text-center contact-header">
-				<h3>Check Out My GitHub: <a href="https://github.com/Trantastic" target="_blank"><img id="github-icon"src="./img/github.svg" alt="GitHub Logo"></a></h3>
-			</div>
-			<div class="col-md-12 mt-4 text-center contact-header">
-				<h3>Connect With Me: <a href="https://www.linkedin.com/in/yvette-tran/" target="_blank"><img id="linkedin-icon" src="./img/linkedin.svg" alt="LinkedIn Icon"></a></h3>
-			</div>
-			<div class="col-md-12 mt-4 text-center contact-header">
-				<h3>Or</h3>
-			</div>
-			<div class="col-md-12 mt-4 text-center contact-header">
-				<h3>Email Me: <a href="mailto:yvettetran@gmail.com">yvettetran@gmail.com</a></h3>
-			</div>
-		</div>
-	</div> -->
 
 	<!-- ScrollReveal -->
 	<script src="https://unpkg.com/scrollreveal"></script>
